# ctk-example

./: Cargo.toml  README.md
protocol/: Cargo.toml  build.rs
protocol/protos/: connectivity.proto
protocol/protos/spotify/client_token/v0/: client_token_http.proto
protocol/src/: lib.rs
src/: client_token.rs  lib.rs  main.rs
