[package]
name = "ctk-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "token"
path = "src/main.rs"

[dependencies]
sha-1 = "0.10.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
protobuf = "3.1.0"
byteorder = "1.4.3"

[dependencies.protocol]
path = "protocol"
version = "0.1.0"

[workspace]

members = [
    "protocol",
]
